# perp

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
src/Perpic_backend/: Cargo.toml
src/perp/: Cargo.toml  perp.did
src/perp/src/: integration_tests.rs  lib.rs  types.rs
src/perp/src/corelib/: bit_lib.rs  bitmap_lib.rs  calc_lib.rs  constants.rs  mod.rs  order_lib.rs  price_lib.rs  swap_lib.rs  tick_lib.rs
src/store/: Cargo.toml  store.did
src/store/src/: lib.rs
src/vault/: Cargo.toml  store.did
src/vault/src/: lib.rs  test.rs  types.rs
src/vault/src/core_lib/: staking.rs  token.rs
src/xrc/: Cargo.toml  xrc.did
src/xrc/src/: lib.rs  types.rs
