[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
[dependencies]

candid = "0.10"
ic-cdk = "0.13"
ciborium = "0.2.1"
futures = "0.3"
icrc-ledger-types = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
ic-cdk-macros = "0.6.8"
ic-stable-structures = "0.5.6"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers

