[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
candid = "0.10"
ic-cdk = "0.16.0"
ciborium = "0.2.1"
futures = "0.3"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
ic-cdk-macros = "0.6.8"
ic-stable-structures = "0.6.5"
ic-cdk-timers = "0.10.0"
num-traits = "0.2"
sha2 = "0.10.8"


[dev-dependencies]
pocket-ic = "5.0.0"
